--- a/opgovi.html
+++ b/opgovi.html
@@ -80,43 +80,88 @@
             <div class="col-md-6 col-lg-3" style="margin-top: 15px;"><img data-bss-hover-animate="swing" src="assets/img/kuplok.png"></div>
         </div>
     </div>
-    <section data-aos="zoom-in" data-aos-duration="100" class="article-list" style="margin-top: 21px;background: rgba(179,152,15,0.52);">
+    <section class="highlight-clean" style="background: rgba(135,131,30,0.66);font-size: 20px;font-family: Amiri, serif;">
+        <ul class="list-group" style="box-shadow: 3px 4px 1px rgb(205,216,228);">
+            <li class="list-group-item" style="border-bottom: 4px solid rgba(146,144,234,0.61);color: var(--bs-gray-100);background: rgba(255,255,255,0);"><span style="font-family: Amiri, serif;font-size: 18px;">Briševo</span>
+                <div class="row">
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="width: 100%;height: 100%;background: rgba(255,255,255,0);"><a href="#"><img class="img-fluid card-img-top" style="height:200px;" src="assets/img/lavenders-g465313b4a_640.jpg"></a>
+                            <div class="card-body" style="color: rgb(248, 249, 250);">
+                                <h5>OPG Surać</h5>
+                                <p style="color: var(--bs-gray-900);">mob: 091/ 169 2310</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a style="color: var(--bs-gray-900);"><i class="fa fa-eye pe-1"></i>Nema web stranice.<br></a></small></div>
+                        </div>
+                    </div>
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="background: rgba(255,255,255,0);"><a href="#"><img class="card-img-top" style="height:200px;" src="assets/img/grapes-ga2854f121_640.jpg"></a>
+                            <div class="card-body">
+                                <h5>OPG Butić</h5>
+                                <p style="color: var(--bs-gray-900);">091/ 541 5004</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a href="https://www.facebook.com/opgbutic/" style="color: var(--bs-gray-900);" target="_blank"><i class="fa fa-eye pe-1"></i>Posjetite.<br></a></small></div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item" style="border-bottom: 4px solid rgba(146,144,234,0.61);background: rgba(255,255,255,0);color: var(--bs-gray-100);"><span style="font-family: Amiri, serif;font-size: 18px;">Debeljak</span>
+                <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                    <div class="card" style="background: rgba(255,255,255,0);"><a href="#"><img class="card-img-top" style="height:200px;" src="assets/img/grapes-ga2854f121_640.jpg"></a>
+                        <div class="card-body">
+                            <h5>OPG Smolić - Ročak</h5>
+                            <p style="color: var(--bs-gray-900);">099/ 375 0175</p>
+                        </div>
+                        <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a href="https://www.facebook.com/profile.php?id=100057083004953" style="color: var(--bs-gray-900);" target="_blank"><i class="fa fa-eye pe-1"></i>Posjetite<br></a></small></div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item" style="border-bottom: 4px solid rgba(146,144,234,0.61);background: rgba(255,255,255,0);color: var(--bs-gray-100);"><span style="font-family: Amiri, serif;font-size: 18px;">Nadin</span>
+                <div class="row">
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="width: 100%;height: 100%;background: rgba(255,255,255,0);"><a href="#"><img class="img-fluid card-img-top" style="height:200px;" src="assets/img/lavenders-g465313b4a_640.jpg"></a>
+                            <div class="card-body" style="color: rgb(248, 249, 250);">
+                                <h5>OPG Šime Škaulj</h5>
+                                <p style="color: var(--bs-gray-900);">mob: 091/ 169 2310</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a style="color: var(--bs-gray-900);"><i class="fa fa-eye pe-1"></i>Nema web stranice.<br></a></small></div>
+                        </div>
+                    </div>
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="background: rgba(255,255,255,0);"><a href="#"><img class="card-img-top" style="height:200px;" src="assets/img/grapes-ga2854f121_640.jpg"></a>
+                            <div class="card-body">
+                                <h5>OPG Butić</h5>
+                                <p style="color: var(--bs-gray-900);">091/ 541 5004</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a href="https://www.facebook.com/opgbutic/" style="color: var(--bs-gray-900);" target="_blank"><i class="fa fa-eye pe-1"></i>Posjetite.<br></a></small></div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item" style="background: rgba(255,255,255,0);color: var(--bs-gray-100);"><span style="font-family: Amiri, serif;font-size: 18px;">Lišane</span>
+                <div class="row">
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="width: 100%;height: 100%;background: rgba(255,255,255,0);"><a href="#"><img class="img-fluid card-img-top" style="height:200px;" src="assets/img/lavenders-g465313b4a_640.jpg"></a>
+                            <div class="card-body" style="color: rgb(248, 249, 250);">
+                                <h5>OPG Šime Škaulj</h5>
+                                <p style="color: var(--bs-gray-900);">mob: 091/ 169 2310</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a style="color: var(--bs-gray-900);"><i class="fa fa-eye pe-1"></i>Nema web stranice.<br></a></small></div>
+                        </div>
+                    </div>
+                    <div class="col-4 py-3 mx-auto col-xl-4 col-lg-6 col-md-6 col-sm-12" style="min-width:300px;min-height:300px;">
+                        <div class="card" style="background: rgba(255,255,255,0);"><a href="#"><img class="card-img-top" style="height:200px;" src="assets/img/grapes-ga2854f121_640.jpg"></a>
+                            <div class="card-body">
+                                <h5>OPG Butić</h5>
+                                <p style="color: var(--bs-gray-900);">091/ 541 5004</p>
+                            </div>
+                            <div class="card-footer text-center" style="background: var(--bs-gray-100);"><small><a href="https://www.facebook.com/opgbutic/" style="color: var(--bs-gray-900);" target="_blank"><i class="fa fa-eye pe-1"></i>Posjetite.<br></a></small></div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
         <div class="container">
             <div class="intro"></div>
-            <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/lavenders-g465313b4a_640.jpg" style="height: 200.962px;"></a>
-                    <h3 class="name" style="font-family: Amiri, serif;font-size: 20px;">Lavanda i dalmacija</h3>
-                    <p class="description" style="font-family: Amiri, serif;font-size: 18px;color: var(--bs-gray-100);">Odavno je poznato da je lavanda blagotvoran lijek prirode. Donosimo detalje.</p><a class="action" href="blog.html"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);border-color: var(--bs-yellow);"></i></a>
-                </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/grapes-ga2854f121_640.jpg" style="height: 200.025px;"></a>
-                    <h3 class="name" style="font-size: 20px;font-family: Amiri, serif;">Vitar nosi lozje</h3>
-                    <p class="description" style="color: var(--bs-gray-100);font-size: 18px;font-family: Amiri, serif;">Koja je najbolja sorta bijelog grožđa za proizvodnju vina?</p><a class="action" href="blog.html"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);border-color: var(--bs-body-bg);"></i></a>
-                </div>
-                <div class="col-sm-6 col-md-4 item"><a href="blog.html"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/ireland-gc469f588c_640.jpg" style="height: 200px;"></a>
-                    <h3 class="name" style="font-size: 20px;font-family: Amiri, serif;">I ovce i novce</h3>
-                    <p class="description" style="color: var(--bs-gray-100);font-family: Amiri, serif;font-size: 18px;">Saznali smo koja vrsta ovaca je najplodnija.</p><a class="action" href="#"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);"></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="newsletter-subscribe" style="font-family: Amiri, serif;font-size: 18px;background: rgba(255,255,255,0);">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color: #313437;">Pretplatite se na naš Newsletter!</h2>
-                <p class="text-center" style="font-size: 18px;color: var(--bs-gray-100);">Primajte tjedne novosti na Vaš e-mail.</p>
-            </div>
-            <form class="d-flex justify-content-center flex-wrap" method="post">
-                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Vaša e-mail adresa"></div>
-                <div class="mb-3"><button class="btn btn-primary" type="submit" style="background: linear-gradient(#87831e 0%, #87831e 97%);">PRETPLATI SE!</button></div>
-            </form>
-        </div>
-    </section>
-    <section class="highlight-clean" style="background: rgba(135,131,30,0.66);font-size: 20px;font-family: Amiri, serif;">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color: var(--bs-body-color);">O nama</h2>
-                <p class="text-center" style="color: var(--bs-gray-100);"><br>Zadarska polja je besplatna platforma za oglašivanje OPG-ova na zadarskom području. Osnovana je 2021. godine kao projekt dvije studentice Informacijskih tehnologija u Zadru.<br>Ideja je bila približiti lokalne, zdrave proizvode mlađim generacijama i time pridonjeti zdravijim prehrambenim navikama Zadrana, ali i potaknuti lokalnu proizvodnju i potrošnju.<br><br></p>
-            </div>
         </div>
     </section>
     <footer class="footer-dark" style="background: rgba(40,45,50,0);font-family: Amiri, serif;font-size: 18px;">
