--- a/linkovi.html
+++ b/linkovi.html
@@ -59,67 +59,35 @@
                     <li class="nav-item"><a class="nav-link float-start" data-bss-hover-animate="pulse" href="opgovi.html" style="font-family: Amiri, serif;color: var(--bs-gray-200);">opg-ovi</a></li>
                     <li class="nav-item"><a class="nav-link float-start" data-bss-hover-animate="pulse" href="blog.html" style="color: var(--bs-gray-200);font-family: Amiri, serif;">blog</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link float-start" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="font-family: Amiri, serif;color: var(--bs-gray-200);">za opg-ove&nbsp;</a>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link float-start" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" style="font-family: Amiri, serif;color: var(--bs-gray-200);">za opg-ove&nbsp;</a>
                         <div class="dropdown-menu" style="background: #8a7735;"><a class="dropdown-item" href="linkovi.html" style="font-family: Amiri, serif;color: var(--bs-body-bg);background: #8a7735;">korisni linkovi</a><a class="dropdown-item" href="obrazac.html" style="font-family: Amiri, serif;color: var(--bs-light);background: #8a7735;">obrazac</a><a class="dropdown-item" href="faq.html" style="font-family: Amiri, serif;color: var(--bs-body-bg);background: #8a7735;">faq</a></div>
                     </li>
                 </ul><a class="float-end" data-bss-hover-animate="pulse" href="kontakt.html" style="font-family: Amiri, serif;color: var(--bs-gray-200);font-weight: bold;">kontakt</a>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-9" style="height: 303px;"><small style="font-family: Amiri, serif;font-size: 18px;color: var(--bs-gray-100);">Pretražite naše OPG-ove:</small>
-                <section class="map-clean" style="background: rgba(98,255,84,0);margin-top: -75px;">
-                    <div class="container">
-                        <div class="intro">
-                            <h2 class="text-center"></h2>
-                        </div>
-                    </div><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCejo0aj6wl8ai5Lq52Tv_XSrv7AGcs18g&amp;q=Murvica%2C+Zadarska+%C5%BEup.+City+Galleria%2C+Zadar&amp;zoom=15" width="100%" height="450" style="width: 766px;height: 328px;margin-top: 16px;"></iframe>
-                </section>
-            </div>
-            <div class="col-md-6 col-lg-3" style="margin-top: 15px;"><img data-bss-hover-animate="swing" src="assets/img/kuplok.png"></div>
+    <div class="d-flex flex-column justify-content-center align-items-stretch box" style="padding-top: 23px;padding-right: 27px;padding-bottom: 28px;padding-left: 35px;font-family: Amiri, serif;color: var(--bs-gray-100);">
+        <div class="content-block">
+            <h4>Zadranka</h4>
+            <p class="mb-0">Prvi zadarski online dućan.</p>
         </div>
+        <div class="content-block link"><a href="#" style="color: var(--bs-orange);">https://zadranka.hr/</a></div>
     </div>
-    <section data-aos="zoom-in" data-aos-duration="100" class="article-list" style="margin-top: 21px;background: rgba(179,152,15,0.52);">
-        <div class="container">
-            <div class="intro"></div>
-            <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/lavenders-g465313b4a_640.jpg" style="height: 200.962px;"></a>
-                    <h3 class="name" style="font-family: Amiri, serif;font-size: 20px;">Lavanda i dalmacija</h3>
-                    <p class="description" style="font-family: Amiri, serif;font-size: 18px;color: var(--bs-gray-100);">Odavno je poznato da je lavanda blagotvoran lijek prirode. Donosimo detalje.</p><a class="action" href="blog.html"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);border-color: var(--bs-yellow);"></i></a>
-                </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/grapes-ga2854f121_640.jpg" style="height: 200.025px;"></a>
-                    <h3 class="name" style="font-size: 20px;font-family: Amiri, serif;">Vitar nosi lozje</h3>
-                    <p class="description" style="color: var(--bs-gray-100);font-size: 18px;font-family: Amiri, serif;">Koja je najbolja sorta bijelog grožđa za proizvodnju vina?</p><a class="action" href="blog.html"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);border-color: var(--bs-body-bg);"></i></a>
-                </div>
-                <div class="col-sm-6 col-md-4 item"><a href="blog.html"><img class="img-fluid" data-bss-hover-animate="pulse" src="assets/img/ireland-gc469f588c_640.jpg" style="height: 200px;"></a>
-                    <h3 class="name" style="font-size: 20px;font-family: Amiri, serif;">I ovce i novce</h3>
-                    <p class="description" style="color: var(--bs-gray-100);font-family: Amiri, serif;font-size: 18px;">Saznali smo koja vrsta ovaca je najplodnija.</p><a class="action" href="#"><i class="fa fa-arrow-circle-right" data-bss-hover-animate="swing" style="color: var(--bs-body-color);"></i></a>
-                </div>
-            </div>
+    <div class="d-flex flex-column justify-content-center align-items-stretch box" style="padding-top: 23px;padding-right: 27px;padding-bottom: 28px;padding-left: 35px;font-family: Amiri, serif;color: var(--bs-gray-100);">
+        <div class="content-block">
+            <h4>Agroturizam-Zadar</h4>
+            <p class="mb-0">Web magazin za OPG-ove.</p>
         </div>
-    </section>
-    <section class="newsletter-subscribe" style="font-family: Amiri, serif;font-size: 18px;background: rgba(255,255,255,0);">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color: #313437;">Pretplatite se na naš Newsletter!</h2>
-                <p class="text-center" style="font-size: 18px;color: var(--bs-gray-100);">Primajte tjedne novosti na Vaš e-mail.</p>
-            </div>
-            <form class="d-flex justify-content-center flex-wrap" method="post">
-                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Vaša e-mail adresa"></div>
-                <div class="mb-3"><button class="btn btn-primary" type="submit" style="background: linear-gradient(#87831e 0%, #87831e 97%);">PRETPLATI SE!</button></div>
-            </form>
+        <div class="content-block link"><a href="#" style="color: var(--bs-orange);">https://www.agroturizam-zadar.hr/</a></div>
+    </div>
+    <div class="d-flex flex-column justify-content-center align-items-stretch box" style="padding-top: 23px;padding-right: 27px;padding-bottom: 28px;padding-left: 35px;font-family: Amiri, serif;color: var(--bs-gray-100);">
+        <div class="content-block">
+            <h4>Agrra</h4>
+            <p class="mb-0">Agencija za ruralni razvoj Zadarske županije.</p>
         </div>
-    </section>
-    <section class="highlight-clean" style="background: rgba(135,131,30,0.66);font-size: 20px;font-family: Amiri, serif;">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color: var(--bs-body-color);">O nama</h2>
-                <p class="text-center" style="color: var(--bs-gray-100);"><br>Zadarska polja je besplatna platforma za oglašivanje OPG-ova na zadarskom području. Osnovana je 2021. godine kao projekt dvije studentice Informacijskih tehnologija u Zadru.<br>Ideja je bila približiti lokalne, zdrave proizvode mlađim generacijama i time pridonjeti zdravijim prehrambenim navikama Zadrana, ali i potaknuti lokalnu proizvodnju i potrošnju.<br><br></p>
-            </div>
-        </div>
-    </section>
-    <footer class="footer-dark" style="background: rgba(40,45,50,0);font-family: Amiri, serif;font-size: 18px;">
+        <div class="content-block link"><a href="#" style="color: var(--bs-orange);">http://www.agrra.hr/</a></div>
+    </div>
+    <footer class="footer-dark" style="background: rgba(135,131,30,0.56);font-family: Amiri, serif;font-size: 18px;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3 item">
